Fix HD mode in newer versions of Java
Signed-off-by: Graham <gpe@openrs2.org>